--- a/react-truck/public/css/styles.css
+++ b/react-truck/public/css/styles.css
@@ -152,7 +152,7 @@ a:hover {
 }
 
 .bg-gray1 {
-   // background-image: url(../images/backgrounds/bg-1.jpg);
+   /* // background-image: url(../images/backgrounds/bg-1.jpg); */
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url("../images/background1.jpg");
@@ -160,7 +160,7 @@ a:hover {
 
 
 .bg-gray2 {
-   // background-image: url(../images/backgrounds/bg-1.jpg);
+   /* // background-image: url(../images/backgrounds/bg-1.jpg); */
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url("https://perthmusicacademy.com.au/wp-content/uploads/2014/09/002-blurred-background-texture-vol2.png");
@@ -1751,4 +1751,21 @@ a:hover {
 	}
 
 }
-
+.login-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.login-logo img {
+    width: 200px;
+}
+.inner-login {
+    background: #fff;
+    padding: 40px;
+    box-shadow: 0 0 10px #ccc;
+    border-radius: 10px;
+    width: 100%;
+}
+.Login-Page{
+	background-image: url('../images/world_map.png');
+}
